<resources>
    <string name="app_name">PEC3App</string>
    <string name="maps">Maps</string>
    <string name="museums">Museums</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="quizzes">Quizzes</string>
    <string name="title_activity_maps">Map</string>
    <string name="data_conexion_error">There was an error attempting to get the data</string>
    <string name="location_permission_error">Sorry, you have to accept the location permission in order to see the details of this map</string>
    <string name="img_ok">The image was saved successfully</string>
    <string name="no_photo">No photo</string>
    <string name="img_error">Sorry, there was a problem creating the file</string>
    <string name="camera">Take a photo</string>
</resources>
