<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                            <RelativeLayout
                                android:id="@+id/rellay_maps"
                                android:layout_width="match_parent"
                                android:background="@color/red"
                                android:layout_weight="0.55"
                                android:clickable="true"
                                android:foreground="?attr/selectableItemBackground"
                                android:layout_height="match_parent">
                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true">
                                            <ImageView
                                                android:id="@+id/imgViewMaps"
                                                android:layout_width="60dp"
                                                android:layout_height="60dp"
                                                android:src="@drawable/maps"
                                                android:tint="@color/white"
                                                android:adjustViewBounds="true"
                                                android:scaleType="centerInside"
                                                android:padding="8dp"
                                                android:layout_centerHorizontal="true"></ImageView>

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/maps"
                                                android:layout_below="@+id/imgViewMaps"
                                                android:layout_centerHorizontal="true"
                                                android:layout_marginTop="5dp"
                                                android:textSize="14sp"></TextView>
                                    </RelativeLayout>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/rellay_museums"
                                android:layout_width="match_parent"
                                android:background="@color/yellow"
                                android:clickable="true"
                                android:foreground="?attr/selectableItemBackground"
                                android:layout_weight="0.55"
                                android:layout_height="match_parent">
                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true">
                                            <ImageView
                                                android:id="@+id/imgViewMuseums"
                                                android:layout_width="60dp"
                                                android:layout_height="60dp"
                                                android:tint="@color/white"
                                                android:src="@drawable/museum"
                                                android:adjustViewBounds="true"
                                                android:scaleType="centerInside"
                                                android:padding="8dp"
                                                android:layout_centerHorizontal="true"></ImageView>

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/museums"
                                                android:layout_below="@+id/imgViewMuseums"
                                                android:layout_centerHorizontal="true"
                                                android:layout_marginTop="5dp"
                                                android:textSize="14sp"></TextView>
                                    </RelativeLayout>

                            </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1">
                            <RelativeLayout
                                android:id="@+id/rellay_contacts"
                                android:layout_width="match_parent"
                                android:background="@color/lime"
                                android:layout_weight="0.55"
                                android:foreground="?attr/selectableItemBackground"
                                android:layout_height="match_parent">
                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true">
                                            <ImageView
                                                android:id="@+id/imgViewContacts"
                                                android:layout_width="60dp"
                                                android:layout_height="60dp"
                                                android:src="@drawable/contacts"
                                                android:tint="@color/white"
                                                android:adjustViewBounds="true"
                                                android:scaleType="centerInside"
                                                android:padding="8dp"
                                                android:layout_centerHorizontal="true"></ImageView>

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/contacts"
                                                android:layout_below="@+id/imgViewContacts"
                                                android:layout_centerHorizontal="true"
                                                android:layout_marginTop="5dp"
                                                android:textSize="14sp"></TextView>
                                    </RelativeLayout>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/rellay_quizzes"
                                android:layout_width="match_parent"
                                android:background="@color/green"
                                android:foreground="?attr/selectableItemBackground"
                                android:layout_weight="0.55"
                                android:clickable="true"
                                android:layout_height="match_parent">
                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true">
                                            <ImageView
                                                android:id="@+id/imgViewQuizzes"
                                                android:layout_width="60dp"
                                                android:layout_height="60dp"
                                                android:tint="@color/white"
                                                android:src="@drawable/quizzes"
                                                android:adjustViewBounds="true"
                                                android:scaleType="centerInside"
                                                android:padding="8dp"
                                                android:layout_centerHorizontal="true"></ImageView>

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/quizzes"
                                                android:layout_below="@+id/imgViewQuizzes"
                                                android:layout_centerHorizontal="true"
                                                android:layout_marginTop="5dp"
                                                android:textSize="14sp"></TextView>
                                    </RelativeLayout>

                            </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1">
                            <RelativeLayout
                                android:id="@+id/rellay_settings"
                                android:layout_width="match_parent"
                                android:background="@color/violet"
                                android:layout_weight="0.55"
                                android:clickable="true"
                                android:foreground="?attr/selectableItemBackground"
                                android:layout_height="match_parent">
                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true">
                                            <ImageView
                                                android:id="@+id/imgViewSettings"
                                                android:layout_width="60dp"
                                                android:layout_height="60dp"
                                                android:tint="@color/white"
                                                android:src="@drawable/settings"
                                                android:adjustViewBounds="true"
                                                android:scaleType="centerInside"
                                                android:padding="8dp"
                                                android:layout_centerHorizontal="true"></ImageView>

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/settings"
                                                android:layout_below="@+id/imgViewSettings"
                                                android:layout_centerHorizontal="true"
                                                android:layout_marginTop="5dp"
                                                android:textSize="14sp"></TextView>
                                    </RelativeLayout>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/rellay_help"
                                android:layout_width="match_parent"
                                android:background="@color/dark_blue"
                                android:foreground="?attr/selectableItemBackground"
                                android:layout_weight="0.55"
                                android:layout_height="match_parent">
                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true">
                                            <ImageView
                                                android:id="@+id/imgViewHelp"
                                                android:layout_width="60dp"
                                                android:layout_height="60dp"
                                                android:tint="@color/white"
                                                android:src="@drawable/help"
                                                android:adjustViewBounds="true"
                                                android:scaleType="centerInside"
                                                android:padding="8dp"
                                                android:layout_centerHorizontal="true"></ImageView>

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/help"
                                                android:layout_below="@+id/imgViewHelp"
                                                android:layout_centerHorizontal="true"
                                                android:layout_marginTop="5dp"
                                                android:textSize="14sp"></TextView>
                                    </RelativeLayout>

                            </RelativeLayout>
                    </LinearLayout>
            </LinearLayout>
    </RelativeLayout>

</RelativeLayout>